--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  --grey:#8e8c92;
+  --orange:#f37f12;
+  --blue:#0f607b;
 }
 
 .logo {
@@ -40,3 +43,19 @@
 .read-the-docs {
   color: #888;
 }
+
+html, body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Keeps the form centered */
+
+}
+
