--- a/react-app/src/Button.module.css
+++ b/react-app/src/Button.module.css
@@ -1,6 +1,6 @@
 button{
-    background-color: rgb(177, 186, 186);
-    color:rgb(20, 117, 117)
+    background-color: var(--green);
+    color:#ffffff;  
 
 }
 
@@ -18,5 +18,6 @@ button{
 }
 
 button:hover{
-    border-color: var(--orange);
+    border-color: var(--red);
+    border-width: 1.3px;
 }
