--- a/react-app/src/Image.module.css
+++ b/react-app/src/Image.module.css
@@ -2,7 +2,7 @@ img{
     width: 300px;
     height: auto; /*Maintain aspect ratio*/
     border-radius: 10px; 
-    box-shadow: 10px 10px 15px rgba(9, 9, 9, 0.3);
+    box-shadow: 10px 10px 15px var(--brown);
 
 
 }
@@ -10,4 +10,5 @@ img{
     margin-top:60px;
     width:100px;
     height:100px;
+    box-shadow: none;
 }
