--- a/react-app/src/AboutUs.module.css
+++ b/react-app/src/AboutUs.module.css
@@ -3,12 +3,12 @@
 }
 ul,ol{
     list-style: none;
-    color:var(--grey);
+    color:var(--green);
 }
 .title{
     font-size: 40px;
-    color: var(--blue);
+    color: var(--red);
 }
 h2{
-    color:var(--orange);
+    color:var(--red);
 }
