--- a/react-app/src/NavBar.module.css
+++ b/react-app/src/NavBar.module.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: var(--grey);
+    background-color: var(--green);
     padding: 1px 10px;
     display: flex;
     justify-content: space-between; /* Spread out links */
@@ -13,13 +13,13 @@ nav {
   
   nav a {
     text-decoration: none;
-    color: white;
+    color: #ffffff;
     font-weight: bold;
     padding: 10px;
     transition: color 0.3s ease-in-out;
   }
   
   nav a:hover {
-    color: var(--orange);
+    color: var(--red);
   }
   
