--- a/react-app/src/AboutUs.module.css
+++ b/react-app/src/AboutUs.module.css
@@ -10,5 +10,8 @@ ul,ol{
     color: var(--red);
 }
 h2{
-    color:var(--red);
+    color:var(--brown);
+}
+.subtitle{
+    color:var(--ltgreen);
 }
