--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
   --green:#5d6048;;
   --red:#d1302f;;
-  --ltgreen:#3c703a;;
+  --ltgreen:#8bab58;
   --brown: #a58d6a;
 }
 
