--- a/react-app/src/Button.module.css
+++ b/react-app/src/Button.module.css
@@ -10,6 +10,7 @@ button{
     font-size: 20px;
     padding: 15px 30px;
     display: block; /* Ensures proper sizing */
+    background-color: var(--brown);
     
 }
 
